--- a/gapminder.Rmd
+++ b/gapminder.Rmd
@@ -102,3 +102,9 @@ data_lowLifeExp %>%
   geom_point()
 ```
 
+Find countries with interesting stories. Open-ended and, therefore, hard. Promising but unsuccessful attempts are encouraged. This will generate interesting questions to follow up on in class.
+
+```{r}
+gapminder %>% 
+  filter(country=='United States')
+```
